--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Bienvenue sur ma page</h1>
     <p>Ceci est un paragraphe.</p>
+    <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg" alt="Un chat fatigué par la vie">
 </body>
 </html>
