Ajout a la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8"> <!-- Définit la table de caractères à utiliser et permet la présence, entre autres, des accents sur les lettres-->
 </head>
 <body>
-    <h1>Bienvenue sur ma page</h1>
-    <p>Ceci est un paragraphe.</p>
+    <h1>BURGER SUPER SMASH</h1>
+    <p>The best burger...for sure!</p>
     <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg" alt="Un chat fatigué par la vie">
 </body>
 </html>
