ajout a la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Ma première page</title>
-    <meta charset="UTF-8"> <!-- Définit la table de caractères à utiliser et permet la présence, entre autres, des accents sur les lettres-->
+    <meta charset="UTF-8">
+    <!-- Définit la table de caractères à utiliser et permet la présence, entre autres, des accents sur les lettres-->
 </head>
+
 <body>
-    <section class="hero-section"> 
-    <h1>BURGER SUPER SMASH</h1>
-    <p>The best burger...for sure!</p>
-    <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg" alt="Un chat fatigué par la vie">
-</section>
-     <section class="map-section">  
-    <p>The best burger...for sure!</p>
-    <p>Rendez-vous à mayol!</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46223.089291852506!2d1.3239383697509757!3d43.60772672928877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750862801140!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
-<section class="about-section"> 
-    <p>Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt augue</p>
-    <p>Burger super smach</p> 
-    <p>Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt augue. Nunc</p>   
+    <section class="hero-section">
+        <h1>BURGER SUPER SMASH</h1>
+        <p>The best burger...for sure!</p>
+        <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg"
+            alt="Un chat fatigué par la vie">
+        <link rel="stylesheet" href="style.css">
+    </section>
+    <section class="map-section">
+        <p>The best burger...for sure!</p>
+        <p>Rendez-vous à mayol!</p>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46223.089291852506!2d1.3239383697509757!3d43.60772672928877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750862801140!5m2!1sfr!2sfr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <section class="about-section">
+        <p>Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt
+            augue</p>
+        <p>Burger super smach</p>
+        <p>Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt
+            augue. Nunc</p>
 </body>
+
 </html>
