--- a/index.html
+++ b/index.html
@@ -5,30 +5,48 @@
     <title>Ma première page</title>
     <meta charset="UTF-8">
     <!-- Définit la table de caractères à utiliser et permet la présence, entre autres, des accents sur les lettres-->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="hero-section">
-        <h1>BURGER SUPER SMASH</h1>
-        <p>The best burger...for sure!</p>
-        <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg"
-            alt="Un chat fatigué par la vie">
-        <link rel="stylesheet" href="style.css">
+        <div>
+            <h1>BURGER SUPER SMASH</h1>
+            <p class="oreo"> The best burger...for sure!</p>
+        </div>
+        <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg" alt="Un chat fatigué par la vie" width="900" height="auto">
     </section>
-    <section class="map-section">
-        <p>The best burger...for sure!</p>
-        <p>Rendez-vous à mayol!</p>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46223.089291852506!2d1.3239383697509757!3d43.60772672928877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750862801140!5m2!1sfr!2sfr"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section class="holo-section">
+        <div>
+            <h2 class="oui-oui"> The best burger...for sure</h2>
+            <h2 class="nn-nn"> Rendez-vous à mayol !</h2>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23114.757613124024!2d1.4144921!3d43.599364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750951511782!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="reseaux">    
+        <img src="/home/user/Downloads/instagram-logo.png" alt="oui oui">
+        <img src="/home/user/Downloads/snao-768x461.webp" alt="">
+        <img src="/home/user/Downloads/Screenshot_2020-05-12_at_4.10.27_PM.webp" alt="">
+       </div>
     </section>
-    <section class="about-section">
-        <p>Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt
-            augue</p>
-        <p>Burger super smach</p>
-        <p>Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt
-            augue. Nunc</p>
+    <section class="zero-section">
+        <div>
+            <p class="zo">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt augue.</p>
+        </div>
+        <div>
+            <p class="zi">Burger super smash</p>
+        </div>
+        <div>
+            <p class="za">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincdunt augue. Nunc</p>
+        </div>
+
+
+
+
+    </section>
+
 </body>
 
 </html>
