ajout a la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -17,7 +28,7 @@
             <h1>BURGER SUPER SMASH</h1>
             <p class="oreo"> The best burger...for sure!</p>
         </div>
-        <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f.jpg" alt="Un chat fatigué par la vie" width="900" height="auto">
+        <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f-removebg-preview(1).png">
     </section>
     <section class="holo-section">
         <div>
@@ -29,7 +40,7 @@
         <img src="/home/user/Downloads/instagram-logo.png" alt="oui oui">
         <img src="/home/user/Downloads/snao-768x461.webp" alt="">
         <img src="/home/user/Downloads/Screenshot_2020-05-12_at_4.10.27_PM.webp" alt="">
-       </div>
+        </div>
     </section>
     <section class="zero-section">
         <div>
@@ -40,11 +51,7 @@
         </div>
         <div>
             <p class="za">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincdunt augue. Nunc</p>
-        </div>
-
-
-
-
+        </div>    
     </section>
 
 </body>
