--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23114.757613124024!2d1.4144921!3d43.599364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750951511782!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="reseaux">    
         <img src="/home/user/Downloads/instagram-logo.png" alt="oui oui">
-        <img src="/home/user/Downloads/snao-768x461.webp" alt="">
+        <img src="/home/user/Downloads/snao-768x461.webp" alt="nn nn">
         <img src="/home/user/Downloads/Screenshot_2020-05-12_at_4.10.27_PM.webp" alt="">
         </div>
     </section>
