ajout a la page d'acceil

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style.css">
 
@@ -37,21 +40,16 @@
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23114.757613124024!2d1.4144921!3d43.599364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750951511782!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="reseaux">    
-        <img src="/home/user/Downloads/instagram-logo.png" alt="oui oui">
-        <img src="/home/user/Downloads/snao-768x461.webp" alt="nn nn">
-        <img src="/home/user/Downloads/Screenshot_2020-05-12_at_4.10.27_PM.webp" alt="">
+        <img src="instagram-logo.png" alt="oui oui">
+        <img src="3d-snapchat-logo-icon-3d-inflated-snapchat-logo-icon-free-png.webp" alt="nn nn">
+        <img src="tiktok-logo-on-a-black-and-white-square-free-png.webp" alt="olala">
         </div>
     </section>
     <section class="zero-section">
-        <div>
             <p class="zo">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt augue.</p>
-        </div>
-        <div>
             <p class="zi">Burger super smash</p>
-        </div>
-        <div>
             <p class="za">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincdunt augue. Nunc</p>
-        </div>    
+           
     </section>
 
 </body>
