Ajout a la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -1,56 +1,66 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Ma première page</title>
     <meta charset="UTF-8">
-    <!-- Définit la table de caractères à utiliser et permet la présence, entre autres, des accents sur les lettres-->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">  
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">  
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Rubik+Spray+Paint&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Rubik+Spray+Paint&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Manufacturing+Consent&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Spray+Paint&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <section class="hero-section">
         <div>
             <h1>BURGER SUPER SMASH</h1>
             <p class="oreo"> The best burger...for sure!</p>
         </div>
+
         <img src="Ultimate-Veggie-Burgers-FT-Recipe-0821-5d7532c53a924a7298d2175cf1d4219f-removebg-preview(1).png">
     </section>
+
     <section class="holo-section">
         <div>
             <h2 class="oui-oui"> The best burger...for sure</h2>
             <h2 class="nn-nn"> Rendez-vous à mayol !</h2>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23114.757613124024!2d1.4144921!3d43.599364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750951511782!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <div class="reseaux">    
-        <img src="instagram-logo.png" alt="oui oui">
-        <img src="3d-snapchat-logo-icon-3d-inflated-snapchat-logo-icon-free-png.webp" alt="nn nn">
-        <img src="tiktok-logo-on-a-black-and-white-square-free-png.webp" alt="olala">
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23114.757613124024!2d1.4144921!3d43.599364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb379119b3fb%3A0xcf63b6c958c013dd!2sSEVENBISTRO%20%E2%80%93%20Gourmet%20%26%20Wine!5e0!3m2!1sfr!2sfr!4v1750951511782!5m2!1sfr!2sfr"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+        <div class="reseaux">
+            <img src="instagram-logo.png" alt="oui oui">
+            <img src="3d-snapchat-logo-icon-3d-inflated-snapchat-logo-icon-free-png.webp" alt="nn nn">
+            <img src="tiktok-logo-on-a-black-and-white-square-free-png.webp" alt="olala">
         </div>
     </section>
+
     <section class="zero-section">
-            <p class="zo">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincidunt augue.</p>
-            <p class="zi">Burger super smash</p>
-            <p class="za">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet tincdunt augue. Nunc</p>
-           
+        <p class="zo">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet
+            tincidunt augue.</p>
+        <p class="zi">Burger super smash</p>
+        <p class="za">Lorem ipsum dolor sit amet,consectetur adipscing elit. pellentesque ut vulputate massa,sit amet
+            tincdunt augue. Nunc</p>
+
     </section>
-
 </body>
-
 </html>
